style: minor letter spacing style fix

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,7 +17,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   line-height: 25px;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.9px;
 }
 
 a {
